Bugfix: if image title is too long, photo container is becoming wider than it sould be

--- a/src/components/photo/Photo.css
+++ b/src/components/photo/Photo.css
@@ -1,4 +1,6 @@
 .photo {
+	max-width: 600px;
+	
 	margin: 1em 1.5em;
 	color: #fff;
 	background-color: rgb(31, 31, 31);
